Version: 1.1.8
Date: 2021.08.25
  Changes:
    - Lizard Doggos can be healed by feeding them another Paleberry.
  Bugfixes:
    - Added sanity check for recipe ingredient counts
    - Used the above sanity check to find that Fabric was listed as craftable in the Constructor, instead of the Assembler.
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2021.08.20
  Locale:
    - Fixed missing locale entry for Parachute description.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2021.08.18
  Bugfixes:
    - Fix another infinite concrete glitch (#89)
  Locale:
    - Latest Russian text fixes
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021.08.17
  Bugfixes:
    - Fix crash when editor is used to delete tiles under Foundation (#84)
    - Deconstructing a blocked foundation would yield infinite concrete (#85)
    - Fix crash when a game admin deletes a player who tamed a lizard doggo (#86)
    - Fix that the wrong player is notified of a milestone already being completed (#87)
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021.08.15
  Locale:
    - Newest Russian translations
  Bugfixes:
    - Fix crash on closing Smart Splitter GUI while still having a menu open
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2021.08.15
  Bugfixes:
    - Players who joined a game after the HUB was built for the first time would not get access to the HUB.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2021.08.15
  Bugfixes:
    - Fix crash when changing Smart Splitter filters in multiplayer
  Changes: